feat(update) index.html integration pages

--- a/style/footer.css
+++ b/style/footer.css
@@ -1,6 +1,6 @@
 .footer-rosa{
     background-color: #f58f9a;
-    height: 300px;
+    height: auto;
     color: #3c363b;
     padding: 40px 20px;
     text-align: center;
@@ -8,15 +8,14 @@
 
 .footer_titulo{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 45px;
-    margin-bottom: 30px;
+    font-size: 20px;
+    margin-bottom: 5px;
     color: #3c363b;
 }
 
 .footer_subtitulo{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 28px;
-    margin-bottom: 30px;
+    font-size: 15px;
     color: #3c363b;
 }
 
@@ -25,8 +24,7 @@
     justify-content:center;
     font-family: Arial, Helvetica, sans-serif;
     initial-letter-align: 10px;
-    margin-bottom: 15px;
-    margin-top: 50px;
+    margin-top: 20px;
     color: #3c363b;
 }
 
@@ -34,9 +32,7 @@
     display: flex;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
-    initial-letter-align: 10px;
-    margin-bottom: 15px;
-    margin-top: 30px;
+    margin-top: 5px;
     color: #3c363b;
 }
 
@@ -44,13 +40,12 @@
     display: flex;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
-    initial-letter-align: 10px;
-    margin-bottom: 50px;
-    margin-top: 30px;
+    margin-top: 5px;
     color: #3c363b;
 }
 
 .pie-de-pagina{
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 30px;
     color: #3c363b;
 }
